fix chatbot button in dark mode

--- a/apps/cornell/src/styles/globals.css
+++ b/apps/cornell/src/styles/globals.css
@@ -52,6 +52,7 @@ svg {
   color: black;
 }
 
+
 .driver-active .toc-sidebar,
 .driver-active .chapter-sidebar,
 .driver-active #site-nav,
@@ -61,6 +62,7 @@ svg {
 
 .driver-popover {
   max-width: 350px !important;
+  @apply bg-background text-foreground !important;
 }
 
 @media (max-width: 768px) {
